# valhalla

./: .dockerignore  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CMakeLists.txt  CONSOLIDATION_COMPLETE.md  SIMPLIFIED_TILE_CONFIGURATION.md  THAILAND_QUICK_START.md  build-jni-bindings.sh  bundle-production-jar.sh  run-singapore-tests.sh  settings.gradle.kts  test-backward-compatibility.sh
.github/workflows/: build-valhalla-image.yml  gh-pages.yml  lint.yml  linux.yml  mingw-build.yml  nodejs_bindings.yml  osx_win_python_builds.yml  publish-jni-jar.yml  publish_tz_db.yml  typos.toml  update_public_servers.yml
archive/2026-02-20-jni-build-analysis/: ANALYSIS_SUMMARY.txt  BUILD_JNI_GUIDE.md  COMMIT_ANALYSIS.md  COMMIT_CHECKLIST.md  MEDIUM_PRIORITY_CHANGES.md  QUICK_BUILD_REFERENCE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  TESTING_CHECKLIST.md
config/pipeline/: pipeline.conf.example  pipeline.dev.conf  pipeline.local.conf  pipeline.prod.conf  pipeline.staging.conf  pipeline.test.conf
config/regions/: README.md  regions.json
config/regions/singapore/: valhalla-singapore.json
config/regions/singapore/profiles/: auto_singapore.json  motorcycle_singapore.json
deploy/config/: pipeline.conf.example  pipeline.dev.conf  pipeline.local.conf  pipeline.prod.conf  pipeline.stage.conf  pipeline.test.conf
deploy/scripts/: run-tile-pipeline.sh
docker/: Dockerfile.prod  Dockerfile.tilebuilder  docker-compose.dev.yml  docker-compose.yml
docs/development/: BUILD_REPORT_2026-02-18.md
docs/regions/: ADD_NEW_REGION_GUIDE.md  ADD_US_REGIONS_GUIDE.md  README.md
examples/: README.md
examples/docker-example/: Dockerfile  README.md  SimpleRoutingService.kt  docker-compose.yml
examples/multiple-regions/: MultiRegionExample.kt  README.md  build.gradle.kts
examples/simple-routing/: README.md  SimpleRoutingExample.kt  build.gradle.kts
gradle/: libs.versions.toml
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pv-tiles.yaml  service.yaml
scripts/: build-tilebuilder-image.sh  format.sh  load-test.sh  run-benchmarks.sh
scripts/regions/: build-jni.sh  build-tiles.sh  download-region-osm.sh  run-tile-pipeline.sh  setup-valhalla.sh  validate-tiles.sh
scripts/regions/singapore/: README.md  build-tiles.sh  download-region-osm.sh
src/: CMakeLists.txt
src/bindings/java/: .editorconfig  .gitignore  CMakeLists.txt  README.md  build-jni-bindings.sh  build.gradle.kts  bundle-production-jar.sh  detekt-config.yml  gradle.properties  settings.gradle.kts
src/bindings/java/docs/: BUILD_GUIDE.md  README.md
src/bindings/java/docs/archived/: BUILD_GUIDE.md  EXTERNAL_TILES_GUIDE.md
src/bindings/java/docs/guides/: DEVELOPMENT.md  GRADLE_OPTIMIZATION.md  PRODUCTION.md  QUICKSTART.md  TESTING_MONITORING_GUIDE.md
src/bindings/java/docs/regions/: ADDING_REGIONS.md  MULTI_REGION_API.md  README.md
src/bindings/java/docs/setup/: BUILD_AND_RUN.md  COMPLETE_SETUP_GUIDE.md  INTEGRATION_GUIDE.md  README.md
src/bindings/java/docs/singapore/: CONFIGURATION_REFERENCE.md  SINGAPORE_QUICKSTART.md
src/bindings/java/gradle/: libs.versions.toml
src/bindings/java/src/jmh/kotlin/global/tada/valhalla/performance/: RouteBenchmark.kt
src/bindings/java/src/main/cpp/: valhalla_jni.cc
src/bindings/java/src/main/kotlin/global/tada/valhalla/: Actor.kt  ValhallaException.kt
src/bindings/java/src/main/kotlin/global/tada/valhalla/config/: RegionConfig.kt  RegionConfigFactory.kt  RegionConfigValidator.kt  SingaporeConfig.kt  TileConfig.kt
src/bindings/java/src/main/kotlin/global/tada/valhalla/metrics/: ValhallaMetrics.kt
src/bindings/java/src/main/kotlin/global/tada/valhalla/traffic/mapping/: GeometryMappingCache.kt  GeometryMappingService.kt  MappingReportGenerator.kt
src/bindings/java/src/main/kotlin/global/tada/valhalla/traffic/models/: EstTravelTimeEntry.kt  SpeedBandEntry.kt  TrafficIncident.kt
src/bindings/java/src/main/kotlin/global/tada/valhalla/traffic/sg/: GeometryMappingJob.kt  IncidentStore.kt  LtaApiClient.kt  LtaApiException.kt  LtaConfig.kt  LtaSnapshotParser.kt  LtaSnapshotStore.kt
src/bindings/java/src/test/kotlin/global/tada/valhalla/: ActorTest.kt  IntegrationTest.kt  LoadTest.kt  MultiRegionAPITest.kt
src/bindings/java/src/test/kotlin/global/tada/valhalla/config/: TileConfigTest.kt
src/bindings/java/src/test/kotlin/global/tada/valhalla/helpers/: RouteRequest.kt
src/bindings/java/src/test/kotlin/global/tada/valhalla/singapore/: SingaporeLocations.kt  SingaporeRideHaulingTest.kt
src/bindings/java/src/test/kotlin/global/tada/valhalla/test/: RegionRideHaulingTest.kt
src/bindings/java/src/test/kotlin/global/tada/valhalla/traffic/mapping/: GeometryMappingServiceTest.kt
src/bindings/java/src/test/kotlin/global/tada/valhalla/traffic/sg/: LtaSnapshotParserTest.kt
src/loki/: worker.cc
src/mjolnir/: adminbuilder.cc  landmarks.cc
src/server/: build.gradle.kts
src/tyr/: serializers.cc
